// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 gfKokg"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 eejXqb"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 jXOnTF"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 kEUGVO"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 FVjst"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 kOBcor"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 gfKokg"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 eejXqb"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 jXOnTF"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 gfKokg"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 eejXqb"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 jXOnTF"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 gfKokg"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 eejXqb"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 jXOnTF"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 gfKokg"
          placeholder="medium"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 eejXqb"
          placeholder="large"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 helczw"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 iLrQMf"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 hFKTIQ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 enHEsf"
      >
        <input
          className="Input-qkdgvx-0 jXOnTF"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 iTZaBC"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
